fix not visible boulder number selectbox in measurement

--- a/templates/default/app.css
+++ b/templates/default/app.css
@@ -28,6 +28,7 @@ button.small { font-size: 80%; padding-top: 0; padding-bottom: 0; }
 .noWrap { white-space: nowrap; }
 .speed_athlete { border: 1px solid black; margin: 3px; background-color: silver; height: 7ex; }
 .max_compl { width: 45px; white-space: nowrap !important; }
+#ranking-result-index_nm\[boulder_n\] { width: 2em; }
 /**
  * Some fixes for ResultService not using a nextmatch
  */
